# todo-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/taskorg/: __init__.py  api.py  cli.py  db.py  task.py
tests/: test_db.py  test_task.py
